...
        appBar: AppBar(
          title: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              IconButton(
                  key: const Key('navigate-back-list-screen-key'),
                  onPressed: () => {Navigator.of(context).pop()},
                  icon: const Icon(Icons.arrow_back, color: Colors.white)),
              const Text('Ver Lista'),
              IconButton(
                key: const Key('view-barcode-list-key'),
                onPressed: () => {Navigator.of(context).push(MaterialPageRoute(builder: (context) => BarcodeListScreen.create()))},
                icon: const Icon(Icons.list_alt, color: Colors.white),
              ),
            ],
          ),
        ),
...
