...
          automaticallyImplyLeading: false, // Don't show the leading button
          title: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: <Widget>[
              IconButton(
                key: const Key('navigate-back-barcode-list-key'),
                onPressed: () => {Navigator.of(context).pop()},
                icon: const Icon(Icons.arrow_back, color: Colors.white),
              ),
              const Text('Códigos'),
              MaterialButton(
                key: const Key('create-new-list-key'),
                onPressed: () async {
                  await model!.deleteList();
                  Navigator.of(context).pushReplacement(MaterialPageRoute(builder: (context) => CreateListScreen.create()));
                },
                child: const Text('Nova Lista', style: TextStyle(color: Colors.white, fontSize: 18)),
              ),
...
